--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-discord.py
-flask
-curl_cffi
-groq
-google-generativeai
-requests
+discord.py>=2.4.0
+groq>=0.5.0
+google-generativeai>=0.5.0
+curl_cffi>=0.6.0
+requests>=2.31.0
+flask>=3.0.0
