--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ discord.py>=2.4.0
 aiohttp>=3.9.0
 groq>=0.5.0
 google-generativeai>=0.5.0
+openai>=1.40.0
 curl_cffi>=0.6.0
 requests>=2.31.0
 flask>=3.0.0
